# django-multipageforms

./: .bumpversion.cfg  .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  runtests.py  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  overview.rst
requirements/: base.txt
src/demo/: urls.py
src/demo/demoapp/: admin.py  apps.py  models.py  urls.py  views.py
src/demo/demoapp/migrations/: 0001_initial.py
src/demo/demoapp/templates/demoapp/: base.html  index.html  multiform.html  multipageform.html  preview_multiform.html  preview_multipageform.html
src/demo/settings/: base.py  demo.py  test.py
src/multipageforms/: apps.py  tools.py
src/multipageforms/forms/: multiform.py  multipageform.py
src/multipageforms/tests/: settings.py  test_multiform.py  test_multipageform.py  test_tools.py
src/multipageforms/views/: generic.py
tests/: settings.py  test_demo.py  test_multiform.py  test_multipageform.py
