[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-multipageforms"
version = "0.7.0"
description = "Form wizard is dead, long live multipageforms"
readme = "README.rst"
authors = [{name = "kaleissin", email = "kaleissin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django :: 1.8",
    "Framework :: Django :: 1.11",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/kaleissin/django-multipageforms"

[tool.wheel]
universal = "1"

[tool.setuptools]
platforms = ["any"]
packages = ["multipageforms"]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true
